--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@syncfusion/ej2-react-documenteditor": "^30.1.42",
     "axios": "^1.11.0",
     "lucide-react": "^0.536.0",
+    "mammoth": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
